--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -12,30 +12,11 @@ Object.defineProperty(obj, property, descriptor)
 - `get`指的是属性的`getter`函数，当访问数据的属性时会读属性的`getter`方法的返回值
 - `set`指的是属性的`setter`函数，当对数据的属性进行写操作时会触发属性的`setter`方法
 
-当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象。
+当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象，下面我们来看一下在Vue中都有哪些东西是响应式的。
 
 ### 2. initState
 在Vue实例的初始化阶段，`_init(options)`方法执行时，有一个`initState(vm)`的操作：
 ```js
-Vue.prototype._init = function (options) {
-  const vm = this
-  // options处理
-
-  vm._self = vm
-
-  initLifecycle(vm)
-  // ...
-
-  callHook(vm, 'beforeCreate')
-  
-  initState(vm)
-  
-  callHook(vm, 'created')
-  
-  // ...
-  vm.$mount(vm.$options.el)
-}
-
 function initState (vm) {
   vm._watchers = []
   const opts = vm.$options
@@ -53,12 +34,143 @@ function initState (vm) {
 }
 ```
 
+先来看`initProps`：
+```js
+function initProps (vm, propsOptions ) {
+  const propsData = vm.$options.propsData || {}
+  const props = vm._props = {}
+  const keys = vm.$options._propKeys = []
+  const isRoot = !vm.$parent
+  if (!isRoot) {
+    toggleObserving(false)
+  }
+  for (const key in propsOptions) {
+    keys.push(key)
+    const value = validateProp(key, propsOptions, propsData, vm)
+    defineReactive(props, key, value)
+    if (!(key in vm)) {
+      proxy(vm, `_props`, key)
+    }
+  }
+  toggleObserving(true)
+}
+```
+
+这里遍历`props`主要做了两件事情：
+- 一个是通过`defineReactive`将`props`中的每个值变成响应式的
+- 另一个是通过`proxy`将`vm._props.**`的访问代理到`vm.**`上
+
+再看`initData`：
+```js
+function initData (vm) {
+  let data = vm.$options.data
+  data = vm._data = typeof data === 'function'
+    ? getData(data, vm)
+    : data || {}
+
+  const keys = Object.keys(data)
+  let i = keys.length
+  while (i--) {
+    const key = keys[i]
+    if (!isReserved(key)) {
+      proxy(vm, `_data`, key)
+    }
+  }
+  observe(data, true)
+}
+```
+
+`initData`遍历`data`做了两件事情：
+- 通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
+- 通过`observe`将`data`变成响应式的
+
+总之这里可以看到`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`defineReactive`和`observe`，以及访问代理`proxy`，随后会分析它们。
+
 ### 3. proxy
+先来看代理：
+```js
+const sharedPropertyDefinition = {
+  enumerable: true,
+  configurable: true,
+  get: noop,
+  set: noop
+}
+
+function proxy (target, sourceKey, key) {
+  sharedPropertyDefinition.get = function proxyGetter () {
+    return this[sourceKey][key]
+  }
+  sharedPropertyDefinition.set = function proxySetter (val) {
+    this[sourceKey][key] = val
+  }
+  Object.defineProperty(target, key, sharedPropertyDefinition)
+}
+```
+
+通过`Object.defineProperty`将`target[sourceKey][key]`的读写变成了对`target[key]`的读写，所以可以通过`vm.xxx`直接访问`vm._props.xxx`和`vm._data.xxx`。
 
 ### 4. observer
+`observe`的功能是监测数据的变化：
+```js
+function observe (value, asRootData) {
+  // 避免将vnode处理为响应式对象
+  if (!isObject(value) || value instanceof VNode) return
+    
+  let ob
+  if (hasOwn(value, '__ob__') && value.__ob__ instanceof Observer) {
+    ob = value.__ob__
+  } else if (
+    shouldObserve &&
+    !isServerRendering() &&
+    (Array.isArray(value) || isPlainObject(value)) &&
+    Object.isExtensible(value) &&
+    !value._isVue
+  ) {
+    ob = new Observer(value)
+  }
+  if (asRootData && ob) {
+    ob.vmCount++
+  }
+  return ob
+}
+```
 
-### 5. Observer
+`observe`方法的作用就是给非`Vnode`类型的对象在`__ob__`属性上维护一个一个`Observer`，如果已经添加过则直接返回，否则新建一个`Observer`：
+```js
+class Observer {
+  constructor (value) {
+    this.value = value
+    this.dep = new Dep()
+    this.vmCount = 0
+    def(value, '__ob__', this)
+    if (Array.isArray(value)) {
+      if (hasProto) {
+        protoAugment(value, arrayMethods)
+      } else {
+        copyAugment(value, arrayMethods, arrayKeys)
+      }
+      this.observeArray(value)
+    } else {
+      this.walk(value)
+    }
+  }
 
-### 6. defineReactive
+  walk (obj) {
+    const keys = Object.keys(obj)
+    for (let i = 0; i < keys.length; i++) {
+      defineReactive(obj, keys[i])
+    }
+  }
+
+  observeArray (items) {
+    for (let i = 0, l = items.length; i < l; i++) {
+      observe(items[i])
+    }
+  }
+}
+```
+
+### 5. defineReactive
+
 
 ### 总结
