--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -74,7 +74,7 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-在这里`vnode.componentOptions.Ctor`对应的是子组件实例`ch`的构造函数，前面一节已经讲到过，它是在`createComponent`中创建的，并在创建组件vnode时写入`vnode.componentOptions`中的。另外需要注意实例化子组件实例`ch`的参数`options`：
+在这里`vnode.componentOptions.Ctor`对应的是子组件实例`ch`的构造函数，前面一节已经讲到过，它是在`createComponent`中创建的，并在创建组件vnode时写入`vnode.componentOptions`中。另外需要注意实例化子组件实例`ch`的参数`options`：
 ```js
 {
   _isComponent: true,
