docs: 响应式对象Observer

--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -126,6 +126,7 @@ function observe (value, asRootData) {
     Object.isExtensible(value) &&
     !value._isVue
   ) {
+    // 被监测的数据必须是数组或原生对象，实例对象上通过_isVue标记避免被监测
     ob = new Observer(value)
   }
   if (asRootData && ob) {
@@ -135,7 +136,9 @@ function observe (value, asRootData) {
 }
 ```
 
-`observe`方法的作用就是给非`Vnode`类型的对象在`__ob__`属性上维护一个一个`Observer`，如果已经添加过则直接返回，否则新建一个`Observer`：
+`observe`作用就是针对需要监测的数据对象在其`__ob__`属性上维护一个`Observer`实例，可以看到，`Vnode`类型变量、Vue实例、非数组或原生对象类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
+
+`Observer`是一个类，它的作用是给对象的属性添加`getter`和`setter`，用于依赖收集和派发更新：
 ```js
 class Observer {
   constructor (value) {
@@ -149,6 +152,7 @@ class Observer {
       } else {
         copyAugment(value, arrayMethods, arrayKeys)
       }
+      // 遍历数组 调用observe
       this.observeArray(value)
     } else {
       this.walk(value)
@@ -169,6 +173,13 @@ class Observer {
   }
 }
 ```
+
+首先是构造函数，一个`observer`上：
+- 用`value`维持了对所被监测的数据的引用
+- 用`dep`维护了一个`Dep`实例，它的作用是收集依赖
+- 将`observer`实例本身添加到了被监测的数据的`__ob__`属性上
+- 根据观测数据的类型调用`observeArray`/`walk`
+
 
 ### 5. defineReactive
 
