docs: Vue响应式 defineReactive

--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -84,7 +84,7 @@ function initData (vm) {
 - 通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
 - 通过`observe`将`data`变成响应式的
 
-总之这里可以看到`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`defineReactive`和`observe`，以及访问代理`proxy`，随后会分析它们。
+总之这里可以看到`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`observe`和`defineReactive`，以及访问代理`proxy`，随后会分析它们。
 
 ### 3. proxy
 先来看代理：
@@ -109,7 +109,7 @@ function proxy (target, sourceKey, key) {
 
 通过`Object.defineProperty`将`target[sourceKey][key]`的读写变成了对`target[key]`的读写，所以可以通过`vm.xxx`直接访问`vm._props.xxx`和`vm._data.xxx`。
 
-### 4. observer
+### 4. Observer
 `observe`的功能是监测数据的变化：
 ```js
 function observe (value, asRootData) {
@@ -136,7 +136,7 @@ function observe (value, asRootData) {
 }
 ```
 
-`observe`作用就是针对需要监测的数据对象在其`__ob__`属性上维护一个`Observer`实例，可以看到，`Vnode`类型变量、Vue实例、非数组或原生对象类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
+`observe`针对需要监测的数据在其`__ob__`属性上维护一个`Observer`实例，可以看到`Vnode`类型变量、Vue实例、非数组或原生对象等类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
 
 `Observer`是一个类，它的作用是给对象的属性添加`getter`和`setter`，用于依赖收集和派发更新：
 ```js
@@ -180,8 +180,64 @@ class Observer {
 - 将`observer`实例本身添加到了被监测的数据的`__ob__`属性上
 - 根据观测数据的类型调用`observeArray`/`walk`
 
+`observeArray`递归调用了`observe`方法，而`walk`则遍历原始对象的`key`调用`defineReactive`。
 
 ### 5. defineReactive
+`defineReactive`用来将一个对象变成响应式的：
+```js
+function defineReactive (obj, key, val, customSetter, shallow) {
+  const dep = new Dep()
 
+  const property = Object.getOwnPropertyDescriptor(obj, key)
+  if (property && property.configurable === false) {
+    return
+  }
+
+  const getter = property && property.get
+  const setter = property && property.set
+  if ((!getter || setter) && arguments.length === 2) {
+    val = obj[key]
+  }
+
+  let childOb = !shallow && observe(val)
+  Object.defineProperty(obj, key, {
+    enumerable: true,
+    configurable: true,
+    get: function reactiveGetter () {
+      const value = getter ? getter.call(obj) : val
+      if (Dep.target) {
+        dep.depend()
+        if (childOb) {
+          childOb.dep.depend()
+          if (Array.isArray(value)) {
+            dependArray(value)
+          }
+        }
+      }
+      return value
+    },
+    set: function reactiveSetter (newVal) {
+      const value = getter ? getter.call(obj) : val
+      if (newVal === value || (newVal !== newVal && value !== value)) {
+        return
+      }
+      if (process.env.NODE_ENV !== 'production' && customSetter) {
+        customSetter()
+      }
+      if (getter && !setter) return
+      if (setter) {
+        setter.call(obj, newVal)
+      } else {
+        val = newVal
+      }
+      childOb = !shallow && observe(newVal)
+      dep.notify()
+    }
+  })
+}
+```
+
+`defineReactive`函数首先创建了一个`Dep`实例，接着拿到`obj`的属性描述符，然后对子对象递归调用`observe`方法，这样就保证了被监测的数据的所有子属性也是响应式的。最后利用`Object.defineProperty`去给`obj`的属性`key`添加`getter`和`setter`，而关于`getter`和` setter`的具体实现，会在下一节分析。
 
 ### 总结
+Vue响应式的核心就是利用`Object.defineProperty`为数据添加了`getter`和`setter`，这样一来在我们在对数据进行读写的时候可以自动执行一些逻辑——`getter`做的事情是依赖收集，`setter`做的事情是派发更新，接下来我们会重点分析这两个过程。
