docs: Watcher 依赖收集

--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -12,7 +12,7 @@ Object.defineProperty(obj, property, descriptor)
 - `get`指的是属性的`getter`函数，当访问数据的属性时会读属性的`getter`方法的返回值
 - `set`指的是属性的`setter`函数，当对数据的属性进行写操作时会触发属性的`setter`方法
 
-当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象，下面我们来看一下在Vue中都有哪些东西是响应式的。
+当一个对象的属性拥有了`getter`和`setter`，我们可以称这个对象为响应式对象，接下来我们来看一看Vue中哪些东西是响应式的。
 
 ### 2. initState
 在Vue实例的初始化阶段，`_init(options)`方法执行时，有一个`initState(vm)`的操作：
@@ -84,7 +84,7 @@ function initData (vm) {
 - 通过`proxy`将`vm._data.**`的访问代理到`vm.**`上
 - 通过`observe`将`data`变成响应式的
 
-总之这里可以看到`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`observe`和`defineReactive`，以及访问代理`proxy`，随后会分析它们。
+总之这里可以看到，`props`和`data`在实例的初始化过程中都被处理为了响应式对象，至于实现它们的`observe`和`defineReactive`，以及访问代理`proxy`，随后会分析它们。
 
 ### 3. proxy
 先来看代理：
@@ -107,7 +107,7 @@ function proxy (target, sourceKey, key) {
 }
 ```
 
-通过`Object.defineProperty`将`target[sourceKey][key]`的读写变成了对`target[key]`的读写，所以可以通过`vm.xxx`直接访问`vm._props.xxx`和`vm._data.xxx`。
+`Object.defineProperty`将`target[sourceKey][key]`的读写变成了对`target[key]`的读写，所以我们可以通过`vm.xxx`直接访问`vm._props.xxx`和`vm._data.xxx`。
 
 ### 4. Observer
 `observe`的功能是监测数据的变化：
@@ -138,7 +138,7 @@ function observe (value, asRootData) {
 
 `observe`针对需要监测的数据在其`__ob__`属性上维护一个`Observer`实例，可以看到`Vnode`类型变量、Vue实例、非数组或原生对象等类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
 
-`Observer`是一个类，它的作用是给对象的属性添加`getter`和`setter`，用于依赖收集和派发更新：
+而`Observer`是一个类，它的作用是通过给对象的属性添加`getter`和`setter`来依赖收集和派发更新，`observe`监测`data`正是通过`Observer`实现的：
 ```js
 class Observer {
   constructor (value) {
@@ -180,10 +180,9 @@ class Observer {
 - 将`observer`实例本身添加到了被监测的数据的`__ob__`属性上
 - 根据观测数据的类型调用`observeArray`/`walk`
 
-`observeArray`递归调用了`observe`方法，而`walk`则遍历原始对象的`key`调用`defineReactive`。
+对于数组的处理，`observeArray`又递归调用了`observe`方法；而`walk`则遍历原始对象的`key`调用`defineReactive`。看来，一切又指向了`defineReactive`。
 
 ### 5. defineReactive
-`defineReactive`用来将一个对象变成响应式的：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
@@ -199,7 +198,9 @@ function defineReactive (obj, key, val, customSetter, shallow) {
     val = obj[key]
   }
 
+  // 递归处理obj[key]
   let childOb = !shallow && observe(val)
+
   Object.defineProperty(obj, key, {
     enumerable: true,
     configurable: true,
@@ -237,7 +238,9 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-`defineReactive`函数首先创建了一个`Dep`实例，接着拿到`obj`的属性描述符，然后对子对象递归调用`observe`方法，这样就保证了被监测的数据的所有子属性也是响应式的。最后利用`Object.defineProperty`去给`obj`的属性`key`添加`getter`和`setter`，而关于`getter`和` setter`的具体实现，会在下一节分析。
+`defineReactive`对子对象递归调用`observe`方法，这样就保证了被监测的数据的所有子属性也是响应式的。
+
+然后利用`Object.defineProperty`去给`obj`的属性`key`添加`getter`和`setter`，关于`defineReactive`内创建的这个`Dep`实例，以及`getter`和` setter`的具体作用会在下一节分析。
 
 ### 总结
 Vue响应式的核心就是利用`Object.defineProperty`为数据添加了`getter`和`setter`，这样一来在我们在对数据进行读写的时候可以自动执行一些逻辑——`getter`做的事情是依赖收集，`setter`做的事情是派发更新，接下来我们会重点分析这两个过程。
