--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -34,11 +34,11 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-这里需要关注的两个地方：
+`defineReactive`方法的执行逻辑内需要关注的两个地方：
 - 一个是实例化了一个`Dep`的实例
-- 另一个是在`get`函数中通过`dep.depend`做依赖收集
+- 另一个是在观测数据对象的`key`属性的`get`函数中有一个`dep.depend`的操作，它是用来做依赖收集用的
 
-### Dep
+### Dep的定义
 ```js
 class Dep {
   constructor () {
@@ -85,11 +85,11 @@ function popTarget () {
 }
 ```
 
-`Dep`实例通过`subs`维护一个`Watcher`数组，另外在`addSub`、`removeSub`、`depend`、`notify`方法之外，`Dep`还有一个静态属性`target`，这是一个**唯一的全局**`Watcher`。
+`Dep`通过对`Watcher`的管理实现对依赖的收集，所以`Dep`实例通过`subs`数组维护了它所管理的`Watcher`实例。`Dep`类有一个静态属性`target`，这是一个**唯一的全局**`Watcher`。
 
-`Dep`实际上就是对`Watcher`的管理，脱离了`Watcher`，`Dep`的存在是没有意义的，下面来看一看什么是`Watcher`。
+`Dep`原型上还有一些依赖收集相关的`addSub`、`removeSub`、`depend`、`notify`方法，在了解它们之前，需要先来看一看什么是`Watcher`。
 
-### Wather
+### Wather的定义
 ```js
 class Watcher {
   constructor (vm, expOrFn, cb, options, isRenderWatcher) {
@@ -124,6 +124,57 @@ class Watcher {
     this.value = this.lazy ? undefined : this.get()
   }
 
+  get () {}
+
+  addDep () {}
+
+  cleanupDeps () {}
+
+  // ... 派发依赖相关的方法
+  update () {}
+
+  run () {}
+
+  evaluate () {}
+
+  depend () {}
+
+  teardown () {}
+}
+```
+
+`Watcher`的构造函数中定义了一些和`Dep`相关的属性——`deps`、`newDeps`、`depIds`、`newDepIds`。其中`deps`和`newDeps`是用来维护`Dep`实例的数组，而`depIds`和`newDepIds`是`Set`类型结构，分别存储的是`deps`和`newDeps`中`Watcher`实例的`id`。
+
+此外，`Watcher`中还有一些和依赖收集相关的`get`、`addDep`和`cleanupDeps`方法，下面我们来看`Watcher`和`Dep`是如何实现依赖收集的。
+
+### 依赖收集的过程
+对数据对象的访问会触发它们的`getter`方法，但是这些响应式对象是什么时候被访问的呢？在分析Vue实例的`$mount`过程时曾讲过`mountComponent`方法：
+```js
+updateComponent = () => {
+  vm._update(vm._render(), hydrating)
+}
+new Watcher(vm, updateComponent, noop, {
+  before () {
+    if (vm._isMounted) {
+      callHook(vm, 'beforeUpdate')
+    }
+  }
+}, true)
+```
+
+在上面对`Watcher`类的分析中可得，在初始化一个`Watcher`实例时：`this.value = this.lazy ? undefined : this.get()`会执行实例的`get`方法：
+```js
+// observer/watcher.js
+class Watcher {
+  constructor (vm, expOrFn) {
+    if (typeof expOrFn === 'function') {
+      this.getter = expOrFn
+    } else {
+      this.getter = parsePath(expOrFn)
+    }
+    this.value = this.lazy ? undefined : this.get()
+  }
+
   get () {
     pushTarget(this)
     let value
@@ -145,59 +196,67 @@ class Watcher {
     }
     return value
   }
+}
 
-  addDep (dep) {
-    const id = dep.id
-    if (!this.newDepIds.has(id)) {
-      this.newDepIds.add(id)
-      this.newDeps.push(dep)
-      if (!this.depIds.has(id)) {
-        dep.addSub(this)
-      }
-    }
-  }
+// observer/dep.js
+Dep.target = null
+const targetStack = []
 
-  cleanupDeps () {
-    let i = this.deps.length
-    while (i--) {
-      const dep = this.deps[i]
-      if (!this.newDepIds.has(dep.id)) {
-        dep.removeSub(this)
-      }
-    }
-    let tmp = this.depIds
-    this.depIds = this.newDepIds
-    this.newDepIds = tmp
-    this.newDepIds.clear()
-    tmp = this.deps
-    this.deps = this.newDeps
-    this.newDeps = tmp
-    this.newDeps.length = 0
-  }
+function pushTarget (target) {
+  targetStack.push(target)
+  Dep.target = target
+}
 
-  // ... 派发依赖相关的方法
-  update () {}
-
-  run () {}
-
-  evaluate () {}
-
-  depend () {}
-
-  teardown () {}
+function popTarget () {
+  targetStack.pop()
+  Dep.target = targetStack[targetStack.length - 1]
 }
 ```
 
-`Watcher`的构造函数中定义了一些和`Dep`相关的属性：
+在`Watcher`实例`get`方法的执行流程中，首先是`pushTarget(this)`，这一步将当前`Watcher`实例：
+1. 赋值给`Dep.target`
+2. 推入全局变量`targetStack`数组中
+
+紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，因此在这个时候触发了响应式对象属性的`getter`。现在回头来看一下`defineReactive`在响应式对象的属性上添加的`getter`：
 ```js
-this.deps = []
-this.newDeps = []
-this.depIds = new Set()
-this.newDepIds = new Set()
+function defineReactive (obj, key, val, customSetter, shallow) {
+  const dep = new Dep()
+
+  val = obj[key]
+  Object.defineProperty(obj, key, {
+    enumerable: true,
+    configurable: true,
+    get: function reactiveGetter () {
+      const value = val
+      if (Dep.target) {
+        dep.depend()
+        if (childOb) {
+          childOb.dep.depend()
+          if (Array.isArray(value)) {
+            dependArray(value)
+          }
+        }
+      }
+      return value
+    }
+  })
+}
 ```
 
-其中，`this.deps`和`this.newDeps`表示`Watcher`实例持有的`Dep`实例的数组，而`this.depIds`和`this.newDepIds`分别代表`this.deps`和`this.newDeps`的`id`的`Set`集合。这里的两个`Dep`实例数组的作用，稍后解释。
+可以看到，对象属性在被处理为响应式的时候都会先创建一个`Dep`实例，然后在触发属性的`getter`的时候会调用这个`Dep`实例的`depend()`方法，再次回到`Dep`中：
+```js
+class Dep {
+  depend () {
+    if (Dep.target) {
+      Dep.target.addDep(this)
+    }
+  }
+}
+```
 
-此外，`Watcher`还定义了一些原型方法，和依赖收集相关的有`get`、`addDep`和`cleanupDeps`方法。
+刚才已经提到，初始化`Watcher`的时候`Dep.target`指向了创建的`Watcher`实例，`Dep.target.addDep(this)`。
+
+刚才我们提到这个时候`Dep.target`已经被赋值为渲染`watcher`，那么就执行到`addDep`方法：
 
 ### 总结
+
