--- a/浏览器工作原理/浏览器-1.架构概述.md
+++ b/浏览器工作原理/浏览器-1.架构概述.md
@@ -1,7 +1,7 @@
-浏览器的主要工作是向服务端发送请求，在窗口中展示用户网络资源——HTML文档、图片、视频等。浏览器解释并显示HTML文档的方式是在HTML、CSS规范中指定的，但是个浏览器厂商在开发他们的浏览器时并没有完全遵从这些规范，这给Web开发人者带来了一些兼容性问题。
+浏览器的主要工作是向服务端发送请求，在窗口中为用户展示HTML文档、图片、视频等网络资源。
 
 ## 浏览器进程架构
-不同的浏览器采用不同的架构模式，它可以是单进程多线程模式，也可以是使用IPC通信的多进程模式，并不存在统一的标准，本文以Chrome浏览器的多进程架构为例对浏览器的架构进行学习与总结。
+不同的浏览器采用不同的架构模式，它可以是单进程多线程模式，也可以是使用IPC通信的多进程模式，不存在统一的标准，本文以Chrome浏览器的多进程架构为例对浏览器的架构进行学习与总结。
 
 ![chrome多进程架构](https://pic.downk.cc/item/5e62a99298271cb2b8672033.png)
 
@@ -10,26 +10,25 @@
 |进程|职责|
 |---|---|
 |浏览器进程|负责包括地址栏、书签栏，前进后退按钮等部分工作；负责处理浏览器的一些不可见的底层操作，如网络请求、文件访问、数据存储、子进程管理等|
-|渲染进程|核心任务是将HTML、CSS和JavaScript 转换为用户可以与之交互的网页，渲染引擎Blink和JS引擎V8均运行在该进程中，默认情况下，Chrome会为每个Tab页创建一个渲染进程。出于安全考虑，渲染进程都是运行在沙箱模式下|
+|渲染进程|核心任务是将HTML、CSS和JavaScript 转换为用户可以与之交互的网页，渲染引擎Blink和JS引擎V8均在该进程中工作，默认情况下，**Chrome会为每个Tab页创建一个渲染进程**。出于安全考虑，渲染进程都是运行在沙箱模式下|
 |插件进程|负责插件的运行，独立于其他进程以保证插件的崩溃不会对浏览器和页面造成影响，不同的插件运行在不同的插件进程中|
 |网络进程|负责页面的网络资源加载|
 |GPU进程|独立于其他进程处理GPU任务，GPU进程被分离成独立进程是因为GPU处理来自不同Tab页的渲染请求并把它们在同一个界面上绘制出来|
 
-下面是在自己的chrome浏览器中打开任务管理器的截图，
-
+下面是在我自己的chrome浏览器中打开任务管理器的截图：
 ![chrome进程test](https://pic.downk.cc/item/5e63c00e98271cb2b8fcf870.jpg)
 
-可以看到，在chrome中，不同的Tab页拥有不同的<font color="red">**渲染进程**</font>，每个插件运行在不同的插件进程中。除了之前表格中所列的的进程之外，在任务管理器中还可以看到`Audio Service`进程和`V8 代理解析工具`等进程。
+可以看到，在chrome中，**不同的Tab页拥有不同的渲染进程**，每个插件运行在不同的插件进程中。除了之前表格中所列的的进程之外，在任务管理器中还可以看到`Audio Service`进程和`V8 代理解析工具`等进程。
 
 ### 多进程架构的优点：
 - 一个Tab页的崩溃不会影响整个浏览器
 - **提供安全性和沙盒性**——操作系统提供了限制进程权限的方法，浏览器可以从某些功能上对进程进行沙盒处理
 
 ### 多进程架构的缺点：
-更高的资源占用——每个进程都拥有独立的内存空间，它们无法共享内存，这造成了一些基础结构副本方面的内存浪费，比如JavaScript运行环境会在不同渲染进程中存在。为了节省内存，Chrome限制了最大进程数，这个数字由设备的内存和CPU能力决定，当达到这一限制时，新打开的Tab会共用之前同一个站点的渲染进程。
+**更高的资源占用**——每个进程都拥有独立的内存空间，它们无法共享内存，这造成了一些基础结构副本方面的内存浪费，比如JavaScript运行环境会在不同渲染进程中存在。为了节省内存，Chrome限制了最大进程数，这个数字由设备的内存和CPU能力决定，当达到这一限制时，新打开的Tab会共用之前同一个站点的渲染进程。
 
 ## 浏览器内核
-浏览器内核包含两个部分：渲染引擎（layout/rendering engine）和JavaScript引擎。最初，渲染引擎和JS引擎并没有区分得很明确，随着JS引擎越来越独立，浏览器内核更倾向于指渲染引擎。
+**浏览器内核包含两个部分：渲染引擎（layout/rendering engine）和JavaScript引擎**。最初，渲染引擎和JS引擎并没有区分得很明确，随着JS引擎越来越独立，浏览器内核更倾向于指渲染引擎。
 
 |渲染引擎|浏览器|JS引擎|出生时间|
 |----|----|----|----|
@@ -42,13 +41,12 @@
 ### 渲染引擎
 浏览器渲染引擎的主要工作就是渲染，即在浏览器窗口中呈现所请求的内容。渲染引擎可以渲染HTML、XML文档和图像，借助插件也可以渲染不同类型的文档比如PDF。
 
-关于渲染引擎的工作原理单独整理在下一节。
+关于渲染引擎的具体工作将在下一节详细分析。
 
 ### JS引擎
-开发者编写的JavaScript代码直接交给浏览器执行时，CPU是不认识的——CPU只认识自己的指令集（汇编代码）。JS引擎可以将JavaScript代码编译为不同CPU(Intel, ARM以及MIPS等)对应的汇编代码。
+开发者编写的JavaScript代码直接交给浏览器执行时，底层CPU是不认识的——CPU只认识自己的指令集（汇编代码）。**JS引擎可以将JavaScript代码编译为不同CPU(Intel, ARM以及MIPS等)对应的汇编代码**，除此之外，JS引擎还负责**执行代码**、**分配内存**以及**垃圾回收**。
 
-在为数不多JS引擎中，V8无疑是最流行的。
-Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作原理后面将单独整理。
+虽然浏览器非常多，但是主流的JavaScirpt引擎很少。而在为数不多JS引擎中，V8无疑是最流行的。Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作在后面小节将单独分析。
 
 ___
 ### 参考
