--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -1,4 +1,4 @@
-前面我们讲到`defineReactive`通过`Object.defineProperty`为被监测的测数据添加`getter`：
+前面我们讲到`defineReactive`通过`Object.defineProperty`为被监测的数据添加`getter`：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
@@ -34,9 +34,9 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-`defineReactive`方法的执行逻辑内需要关注的两个地方：
+`getter`中有两个需要关注的地方：
 - 一个是实例化了一个`Dep`的实例
-- 另一个是在观测数据对象的`key`属性的`get`函数中有一个`dep.depend`的操作，它是用来做依赖收集用的
+- 另一个是在观测数据对象的`key`属性的`getter`中有一个`dep.depend`的操作，它是用来做依赖收集的
 
 ### Dep的定义
 ```js
@@ -46,29 +46,13 @@ class Dep {
     this.subs = []
   }
 
-  addSub (sub) {
-    this.subs.push(sub)
-  }
+  addSub () {}
 
-  removeSub (sub) {
-    remove(this.subs, sub)
-  }
+  removeSub () {}
 
-  depend () {
-    if (Dep.target) {
-      Dep.target.addDep(this)
-    }
-  }
+  depend () {}
 
-  notify () {
-    const subs = this.subs.slice()
-    if (process.env.NODE_ENV !== 'production' && !config.async) {
-      subs.sort((a, b) => a.id - b.id)
-    }
-    for (let i = 0, l = subs.length; i < l; i++) {
-      subs[i].update()
-    }
-  }
+  notify () {}
 }
 
 Dep.target = null
@@ -85,7 +69,7 @@ function popTarget () {
 }
 ```
 
-`Dep`通过对`Watcher`的管理实现对依赖的收集，所以`Dep`实例通过`subs`数组维护了它所管理的`Watcher`实例。`Dep`类有一个静态属性`target`，这是一个**唯一的全局**`Watcher`。
+`Dep`是通过对`Watcher`的管理实现依赖收集，所以`Dep`实例需要通过一个`subs`数组维护它所管理的`Watcher`实例。此外`Dep`类还有一个静态属性`target`，这是一个**唯一的全局**`Watcher`。
 
 `Dep`原型上还有一些依赖收集相关的`addSub`、`removeSub`、`depend`、`notify`方法，在了解它们之前，需要先来看一看什么是`Watcher`。
 
@@ -145,10 +129,10 @@ class Watcher {
 
 `Watcher`的构造函数中定义了一些和`Dep`相关的属性——`deps`、`newDeps`、`depIds`、`newDepIds`。其中`deps`和`newDeps`是用来维护`Dep`实例的数组，而`depIds`和`newDepIds`是`Set`类型结构，分别存储的是`deps`和`newDeps`中`Watcher`实例的`id`。
 
-此外，`Watcher`中还有一些和依赖收集相关的`get`、`addDep`和`cleanupDeps`方法，下面我们来看`Watcher`和`Dep`是如何实现依赖收集的。
+此外，`Watcher`中还有一些和依赖收集相关的`get`、`addDep`和`cleanupDeps`方法，下面我们在分析`Watcher`和`Dep`是如何实现依赖收集的过程中认识这些方法。
 
 ### 依赖收集的过程
-对数据对象的访问会触发它们的`getter`方法，但是这些响应式对象是什么时候被访问的呢？在分析Vue实例的`$mount`过程时曾讲过`mountComponent`方法：
+我们知道，对数据对象的访问会触发它们的`getter`方法，问题是，这些响应式对象是什么时候被访问的呢？在分析Vue实例的`$mount`过程时曾讲过`mountComponent`方法：
 ```js
 updateComponent = () => {
   vm._update(vm._render(), hydrating)
@@ -217,7 +201,7 @@ function popTarget () {
 1. 赋值给`Dep.target`
 2. 推入全局变量`targetStack`数组中
 
-紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，因此在这个时候触发了响应式对象属性的`getter`。现在回头来看一下`defineReactive`在响应式对象的属性上添加的`getter`：
+紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，现在前面的问题也就有了答案——实例化Watcher时触发了响应式对象属性的`getter`。现在再回头来看一下`defineReactive`在响应式对象的属性上添加的`getter`：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
@@ -243,9 +227,13 @@ function defineReactive (obj, key, val, customSetter, shallow) {
 }
 ```
 
-可以看到，对象属性在被处理为响应式的时候都会先创建一个`Dep`实例，然后在触发属性的`getter`的时候会调用这个`Dep`实例的`depend()`方法，再次回到`Dep`中：
+可以看到，对象属性在被处理为响应式的时候都会首先创建一个`Dep`实例，然后在属性的`getter`被触发时这个`Dep`实例的`depend()`方法得到执行，再次回到`Dep`中：
 ```js
 class Dep {
+  constructor () {
+    this.id = uid++
+    this.subs = []
+  }
   depend () {
     if (Dep.target) {
       Dep.target.addDep(this)
@@ -254,9 +242,38 @@ class Dep {
 }
 ```
 
-刚才已经提到，初始化`Watcher`的时候`Dep.target`指向了创建的`Watcher`实例，`Dep.target.addDep(this)`。
+刚才已经提到，初始化`Watcher`时已经将`Dep.target`指向了创建的`Watcher`实例，下面来看`Watcher`的`addDep`：
+```js
+class Watcher {
+  constructor () {}
 
-刚才我们提到这个时候`Dep.target`已经被赋值为渲染`watcher`，那么就执行到`addDep`方法：
+  addDep (dep) {
+    const id = dep.id
+    if (!this.newDepIds.has(id)) {
+      this.newDepIds.add(id)
+      this.newDeps.push(dep)
+      if (!this.depIds.has(id)) {
+        dep.addSub(this)
+      }
+    }
+  }
+}
+```
+
+这里在将`Dep`实例记录进`Watcher`实例`newDepIds`、`newDeps`之前，先做了一些保证`Dep`实例唯一性的逻辑判断，紧接着又调用了`dep.addSub(this)`：
+```js
+class Dep {
+  constructor () {
+    this.id = uid++
+    this.subs = []
+  }
+  addSub (sub) {
+    this.subs.push(sub)
+  }
+}
+```
+
+这里将当前的`Watcher`实例添加到这个响应式数据内的`dep.subs`中，为后续数据变化时通知这些`subs`做准备。
 
 ### 总结
-
+这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`Watcher`去做相应的逻辑处理，这个过程叫派发更新。
