--- a/Vue源码/4.3-响应式-派发更新.md
+++ b/Vue源码/4.3-响应式-派发更新.md
@@ -106,4 +106,58 @@ function queueWatcher (watcher) {
 }
 ```
 
-这里引入了**队列**的概念，这也是Vue在做派发更新的时候的一个优化的点，它并不会每次数据改变都触发`watcher`（订阅者）的回调，而是把这些`watcher`（订阅者）先添加到一个队列里，然后在`nextTick`后执行`flushSchedulerQueue`。
+这里引入了**队列**的概念，并不是每次数据改变都会触发`watcher`（订阅者）的回调，Vue的设计是将这些`watcher`（订阅者）的回调存储在一个队列中，并通过`has`对象保证同一个`Watcher`实例（订阅者）的回调只被添加一次，然后在`nextTick`后通过`flushSchedulerQueue`执行它们：
+```js
+function flushSchedulerQueue () {
+  currentFlushTimestamp = getNow()
+  flushing = true
+  let watcher, id
+
+  queue.sort((a, b) => a.id - b.id)
+
+  for (index = 0; index < queue.length; index++) {
+    watcher = queue[index]
+    if (watcher.before) {
+      watcher.before()
+    }
+    id = watcher.id
+    has[id] = null
+    watcher.run()
+  }
+  const activatedQueue = activatedChildren.slice()
+  const updatedQueue = queue.slice()
+
+  resetSchedulerState()
+
+  callActivatedHooks(activatedQueue)
+  callUpdatedHooks(updatedQueue)
+}
+```
+
+`flushSchedulerQueue`主要做了：
+1. 对队列中的`watcher`按照其`id`做了从小到大的排序，为了确保以下几点：
+   - 组件的更新是由父到子的：因为父组件的创建是先于子的，所以`watcher`的创建也是先父后子，因此需要其对应的回调的执行顺序也保持先父后子。
+   - 用户的自定义`watcher`要优先于渲染`watcher`执行；因为用户自定义`watcher`是在渲染`watcher`之前创建的。
+   - 如果一个组件在其父组件的`watcher`执行期间被销毁，那么它对应的`watcher`可以被跳过，所以父组件的`watcher`应该先执行。
+  
+2. 遍历`queue`中的`watcher`，执行`watcher.run()`。在这一步中，对`watcher.run`的每一次调用都会对`queue.length`进行计算，因为`watcher.run()`执行时有可能会有新的`watcher`被添加，这样会再次回到`flushSchedulerQueue`：
+```js
+function queueWatcher (watcher) {
+  const id = watcher.id
+  if (has[id] == null) {
+    has[id] = true
+    if (!flushing) {
+      queue.push(watcher)
+    } else {
+      let i = queue.length - 1
+      while (i > index && queue[i].id > watcher.id) {
+        i--
+      }
+      queue.splice(i + 1, 0, watcher)
+    }
+  }
+}
+```
+
+3. 
+
