finish 派发更新整理

--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -146,7 +146,7 @@ new Watcher(vm, updateComponent, noop, {
 }, true)
 ```
 
-在上面对`Watcher`类的分析中可得，在初始化一个`Watcher`实例时：`this.value = this.lazy ? undefined : this.get()`会执行实例的`get`方法：
+回顾`Watcher`类的构造函数可得，在初始化一个`watcher`实例时：`this.value = this.lazy ? undefined : this.get()`会执行实例的`get`方法：
 ```js
 // observer/watcher.js
 class Watcher {
@@ -201,7 +201,7 @@ function popTarget () {
 1. 赋值给`Dep.target`
 2. 推入全局变量`targetStack`数组中
 
-紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，现在前面的问题也就有了答案——实例化Watcher时触发了响应式对象属性的`getter`。现在再回头来看一下`defineReactive`在响应式对象的属性上添加的`getter`：
+紧接着是`value = this.getter.call(vm, vm)`，这里`getter`方法对应的正是`vm._update(vm._render(), hydrating)`，而在`vm.render()`**生成vnode的过程中涉及到了对实例上的数据的访问**，至此，前面提出的问题有了答案——实例化`watcher`时触发了响应式对象属性的`getter`。现在再回头来看`defineReactive`在响应式对象的属性上添加的`getter`：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
@@ -242,7 +242,7 @@ class Dep {
 }
 ```
 
-刚才已经提到，初始化`Watcher`时已经将`Dep.target`指向了创建的`Watcher`实例，下面来看`Watcher`的`addDep`：
+刚才已经提到，初始化`watcher`时已经将`Dep.target`指向了创建的`watcher`实例，下面来看`watcher`的`addDep`：
 ```js
 class Watcher {
   constructor () {}
@@ -260,7 +260,7 @@ class Watcher {
 }
 ```
 
-这里在将`Dep`实例记录进`Watcher`实例`newDepIds`、`newDeps`之前，先做了一些保证`Dep`实例唯一性的逻辑判断，紧接着又调用了`dep.addSub(this)`：
+这里在将`Dep`实例记录进`watcher`实例的`newDepIds`、`newDeps`之前，先做了一些确保`Dep`实例唯一性的逻辑判断，紧接着又调用了`dep.addSub(this)`：
 ```js
 class Dep {
   constructor () {
@@ -273,7 +273,7 @@ class Dep {
 }
 ```
 
-这里将当前的`Watcher`实例添加到这个响应式数据内的`dep.subs`中，为后续数据变化时通知这些`subs`做准备。
+这里将当前的`watcher`实例添加到这个响应式数据内的`dep.subs`中，为后续数据变化时通知这些`watcher`做准备。
 
 ### 总结
-这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`Watcher`去做相应的逻辑处理，这个过程叫派发更新。
+这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`watcher`去做相应的逻辑处理，这个过程叫派发更新。
