--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -6,6 +6,7 @@ function defineReactive (obj, key, val, customSetter, shallow) {
   const property = Object.getOwnPropertyDescriptor(obj, key)
   if (property && property.configurable === false) return
 
+  // 属性本身可能由开发者定义了getter或setter
   const getter = property && property.get
   const setter = property && property.set
   if ((!getter || setter) && arguments.length === 2) {
