--- a/Vue源码/4.3-响应式-派发更新.md
+++ b/Vue源码/4.3-响应式-派发更新.md
@@ -1,49 +1,33 @@
-在分析了响应式数据的依赖收集的过程后，接着来看依赖派发更新。再次回到`defineReactive`为响应式数据添加的`setter`：
+在分析了响应式数据的依赖收集的过程后，接着来看依赖派发更新。我们知道，当对Vue实例的响应式数据进行修改时，就会触发对应的`setter`：
 ```js
 function defineReactive (obj, key, val, customSetter, shallow) {
   const dep = new Dep()
 
-  const property = Object.getOwnPropertyDescriptor(obj, key)
-  if (property && property.configurable === false) {
-    return
-  }
-
-  const getter = property && property.get
-  const setter = property && property.set
-  if ((!getter || setter) && arguments.length === 2) {
-    val = obj[key]
-  }
-
-  let childOb = !shallow && observe(val)
   Object.defineProperty(obj, key, {
     enumerable: true,
     configurable: true,
     get: function reactiveGetter () {},
     set: function reactiveSetter (newVal) {
       const value = getter ? getter.call(obj) : val
-      if (newVal === value || (newVal !== newVal && value !== value)) {
-        return
-      }
-      if (process.env.NODE_ENV !== 'production' && customSetter) {
-        customSetter()
-      }
+      if (newVal === value || (newVal !== newVal && value !== value)) return
+        
       if (setter) {
         setter.call(obj, newVal)
       } else {
         val = newVal
       }
+
+      // 这一步的意义是？
       childOb = !shallow && observe(newVal)
+
+      // 通知dep管理的watcher
       dep.notify()
     }
   })
 }
 ```
 
-`setter`中有两个需要关注的地方：
-- 一个是`child = !shallow && observe(newVal)`
-- 另一个是`dep.notify()`，通知订阅者
-
-当在Vue实例中对响应式数据进行了修改，就会触发`setter`，`dep.notify`的逻辑就是遍历`dep.subs`调用`Watcher`实例（订阅者）的`update`：
+这里会比较响应式数据新旧值是否相同，如果相同则不会派发更新；否则调用`dep.notify()`：
 ```js
 class Dep {
   constructor () {
@@ -62,7 +46,7 @@ class Dep {
 }
 ```
 
-`Watcher`的`update`：
+前面我们已经知道，在依赖收集阶段一个实例的`watcher`已经被添加到实例下的每一个响应式数据属性的`dep`中了。`dep.notify`的逻辑就是遍历其`dep.subs`中存储的`watcher`调用对应的`update`方法：
 ```js
 class Watcher {
   constructor (vm, expOrFn, cb, options, isRenderWatcher) {}
@@ -78,8 +62,76 @@ class Watcher {
 }
 ```
 
-### queueWacther
-`update`针对`watcher`的不同状态做了不同处理，`lazy`和`sync`会在后续分析，这里暂时只看`queueWatcher`：
+`update`的流程中根据`watcher`的不同状态做了不同处理，`lazy`和`sync`的逻辑会在后续分析，这里只看`queueWatcher`。
+
+### queueWatcher
+要清楚的是，并不是每次数据改变都会触发`watcher`的更新操作——Vue的设计是将这些需要更新操作的`watcher`先存储在一个队列`queue`中（在这之前还需要校验，通过`has`对象保证同一个`watcher`只被添加一次），然后在`nextTick`中`flushSchedulerQueue`它们：
+```js
+let waiting = false
+let flushing = false
+
+function queueWatcher (watcher) {
+  const id = watcher.id
+  // 某个响应式数据被改变多次，只需更新一次即可
+  if (has[id] == null) {
+    // 
+    has[id] = true
+
+    if (!flushing) {
+      queue.push(watcher)
+    } else {
+      let i = queue.length - 1
+      while (i > index && queue[i].id > watcher.id) {
+        i--
+      }
+      queue.splice(i + 1, 0, watcher)
+    }
+
+    if (!waiting) {
+      waiting = true
+      nextTick(flushSchedulerQueue)
+    }
+  }
+}
+```
+
+这样一来，如果一个`watcher`的`update`被触发了多次（这是很常见的场景，想象一个实例下的多个响应式数据被手动修改的话它们均会触发同一个`watcher.update`），`wathcher`只会被加入`queue`中一次，因为也只需要`update`即可。
+
+```js
+function flushSchedulerQueue () {
+  flushing = true
+  let watcher, id
+
+  queue.sort((a, b) => a.id - b.id)
+
+  for (index = 0; index < queue.length; index++) {
+    watcher = queue[index]
+    if (watcher.before) watcher.before()
+    id = watcher.id
+    // 在has中将watcher删除，否则下一次update时watcher不通过校验无法被加入到queue中
+    has[id] = null
+    watcher.run()
+  }
+  const activatedQueue = activatedChildren.slice()
+  const updatedQueue = queue.slice()
+
+  // 重置
+  resetSchedulerState()
+
+  callActivatedHooks(activatedQueue)
+  callUpdatedHooks(updatedQueue)
+}
+```
+
+`flushSchedulerQueue`主要做了以下几件事情：
+##### 1. 对`queue`队列中的watcher按照其id从小到大排序
+排序的操作是为了确保以下几点：
+- **组件的更新是由父到子的**：因为父组件的创建是先于子的，所以`watcher`的创建也是先父后子，因此需要其对应的回调（`watcher.run`）的执行顺序也保持先父后子。
+- 用户的自定义`watcher`要优先于渲染`watcher`触发——因为用户自定义`watcher`是在渲染`watcher`之前创建的。
+- 如果一个组件在其父组件的`watcher`执行期间被销毁，那么它对应的`watcher`可以被跳过，所以父组件的`watcher`应该先执行。
+  
+##### 2. 遍历queue队列中的watcher，调用watcher.run()
+`watcher.run`方法稍后分析，我们先来看`queue`的循环条件——对`queue`队列长度的计算是实时的，因为在`watcher.run()`执行时可能会有新的`watcher`被加入到`queue`中，这样当再次回到`flushSchedulerQueue`中时：
 ```js
 function queueWatcher (watcher) {
   const id = watcher.id
@@ -94,90 +146,26 @@ function queueWatcher (watcher) {
       }
       queue.splice(i + 1, 0, watcher)
     }
-    if (!waiting) {
-      waiting = true
-
-      if (process.env.NODE_ENV !== 'production' && !config.async) {
-        flushSchedulerQueue()
-        return
-      }
-      nextTick(flushSchedulerQueue)
-    }
   }
 }
 ```
 
-这里引入了**队列**的概念——并不是每次数据改变都会触发`watcher`（订阅者）的更新操作，Vue的设计是将这些`watcher`（订阅者）存储在一个队列`queue`中，并通过`has`对象保证同一个`Watcher`实例（订阅者）只被添加一次，然后在`nextTick`后通过`flushSchedulerQueue`执行它们：
+在这种情况下，`flushing`为`true`，后续的执行逻辑是在`queue`队列（存储的是`watcher`实例）中从后往前（前面已经说过队列中`watcher`按id从小到大排序）找第一个比当前待插入的`watcher`的id小的`watcher`的位置，将当前待插入的`watcher`插入`queue`队列的此位置上。
+
+##### 3. 状态恢复
+这一步用于重置队列及异步更新流程的相关变量：
 ```js
-function flushSchedulerQueue () {
-  currentFlushTimestamp = getNow()
-  flushing = true
-  let watcher, id
-
-  queue.sort((a, b) => a.id - b.id)
-
-  for (index = 0; index < queue.length; index++) {
-    watcher = queue[index]
-    if (watcher.before) {
-      watcher.before()
-    }
-    id = watcher.id
-    has[id] = null
-    watcher.run()
-  }
-  const activatedQueue = activatedChildren.slice()
-  const updatedQueue = queue.slice()
-
-  resetSchedulerState()
-
-  callActivatedHooks(activatedQueue)
-  callUpdatedHooks(updatedQueue)
+function resetSchedulerState () {
+  index = queue.length = activatedChildren.length = 0
+  has = {}
+  waiting = flushing = false
 }
 ```
 
-`flushSchedulerQueue`主要做了：
-1. 对`queue`队列中的`watcher`按照其`id`做了从小到大的排序，为了确保以下几点：
-   - 组件的更新是由父到子的：因为父组件的创建是先于子的，所以`watcher`的创建也是先父后子，因此需要其对应的回调的执行顺序也保持先父后子。
-   - 用户的自定义`watcher`要优先于渲染`watcher`执行；因为用户自定义`watcher`是在渲染`watcher`之前创建的。
-   - 如果一个组件在其父组件的`watcher`执行期间被销毁，那么它对应的`watcher`可以被跳过，所以父组件的`watcher`应该先执行。
-  
-2. 遍历`queue`队列中的`watcher`，执行`watcher.run()`。在这一步中，每一次对`watcher.run`进行调用都会对队列长度`queue.length`进行计算，因为`watcher.run()`执行时有可能会有新的`watcher`被添加，这样会再次回到`flushSchedulerQueue`：
-    ```js
-    function queueWatcher (watcher) {
-      const id = watcher.id
-      if (has[id] == null) {
-        has[id] = true
-        if (!flushing) {
-          queue.push(watcher)
-        } else {
-          let i = queue.length - 1
-          while (i > index && queue[i].id > watcher.id) {
-            i--
-          }
-          queue.splice(i + 1, 0, watcher)
-        }
-      }
-    }
-    ```
-
-    在这种情况下，`flushing`为`true`，后续的执行逻辑是在`queue`队列（存储的是`watcher`实例）中从后往前（前面已经说过队列中`watcher`按id从小到大排序）找第一个比当前待插入的`watcher`的id小的`watcher`的位置，将当前待插入的`watcher`插入`queue`队列的此位置上。
-
-3. 状态恢复：
-    ```js
-    function resetSchedulerState () {
-      index = queue.length = activatedChildren.length = 0
-      has = {}
-      if (process.env.NODE_ENV !== 'production') {
-        circular = {}
-      }
-      waiting = flushing = false
-    }
-    ```
-
-    将`watcher`队列清空，并将流程状态控制的相关变量恢复到初始值。
-
+将`queue`队列清空，并将`waiting`、`flushing`重置为`false`。
 
 ### watcher.run
+这一步是派发更新的关键一环：
 ```js
 class Watcher {
   constructor () {}
@@ -212,12 +200,15 @@ updateComponent = () => {
 
 这就是在修改Vue实例的响应式数据时，会重新触发实例的渲染的原因。
 
+现在仔细回忆一下这个`updateComponent`，它是在挂载实例时创建`watcher`时作为参数传入的，至此我们知道`updateComponent`方法执行的两个场景了：
+- 一个是初次挂载实例`vm.$mount`时，创建vnode导致实例的响应式数据被访问时
+- 另一个就是本节所讲的实例的响应式数据被修改时，触发了实例的`watcher.run`
+
 ### 总结
 在这里分析了Vue的响应式数据派发更新的过程——当数据变化时：
 1. 响应式数据的`set`通知`dep.notify()`
 2. 遍历`dep.subs`的`watcher`执行`watcher.update()`
-3. `watcher.run`执行了`watcher.getter`
+3. `watcher.run`又触发了`watcher.getter`
 4. `vm._update(vm._render(), hydrating)`
    
-
-`watcher.update()`又利用了队列做了进一步优化，在`nextTick`后执行所有`watcher.run()`，最后执行它们的回调函数，下一节我们来重点分析`nextTick`的实现。
+需要`update`操作的`wathcer`被存入`queue`，等待在`nextTick`中被遍历唤起，下一节我们来重点分析`nextTick`的实现。
