--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -219,12 +219,9 @@ function defineReactive (obj, key, val, customSetter, shallow) {
     },
     set: function reactiveSetter (newVal) {
       const value = getter ? getter.call(obj) : val
-      if (newVal === value || (newVal !== newVal && value !== value)) {
-        return
-      }
-      if (process.env.NODE_ENV !== 'production' && customSetter) {
-        customSetter()
-      }
+      if (newVal === value || (newVal !== newVal && value !== value)) return
+      if (process.env.NODE_ENV !== 'production' && customSetter) customSetter()
+
       if (setter) {
         setter.call(obj, newVal)
       } else {
