--- a/前端开发/图片懒加载.md
+++ b/前端开发/图片懒加载.md
@@ -30,7 +30,7 @@ document.addEventListener('scroll', throttle(watchScroll, 200))
 ```
 
 ## 交叉观察者 IntersectionObserver
-对scroll事件的监听（即便使用了节流仍然会）导致大量计算，以及`setTimeout`的使用仍然存在性能问题。
+对scroll事件的监听（即便使用了节流仍然）会导致大量计算，以及`setTimeout`的使用仍然存在性能问题。
 
 2016年，chrome实现了一个新的API —— `IntersectionObserver`：
 > IntersectionObserver接口，提供了一种**异步**观察目标元素与其祖先元素或顶级文档视窗(viewport)交叉状态的方法，祖先元素与视窗(viewport)被称为根(root)。
@@ -123,9 +123,9 @@ const imgs = Array.from(document.querySelectorAll('.lazy-img'))
 imgs.forEach(img => observer.observe(img))
 ```
 
-`IntersectionObserver`是异步的，不随着目标元素的滚动同步触发。
+`IntersectionObserver`的执行是异步的，不随着目标元素的滚动同步触发。
 
-`IntersectionObserver`的实现，应该采用`requestIdleCallback()`（具体参考Event Loop），即只有主线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低。
+`IntersectionObserver`的实现，应该采用`requestIdleCallback()`，即只有主线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低。
 
 ### 浏览器支持情况
 ![IntersectionObserver浏览器支持情况](https://pic.downk.cc/item/5ece0196c2a9a83be55692c1.jpg)
@@ -134,4 +134,4 @@ imgs.forEach(img => observer.observe(img))
 
 ### 参考
 1. [IntersectionObserver API 使用教程](http://www.ruanyifeng.com/blog/2016/11/intersectionobserver_api.html)
-2. [什么？你还在使用这种懒加载方式？](https://juejin.im/post/5d7348c2f265da039d32f236)
+2. [你还在使用这种懒加载方式？](https://juejin.im/post/5d7348c2f265da039d32f236)
