--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -29,7 +29,7 @@ Vue.prototype._init = function (options) {
 在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`长什么样。
 
 ### 1. Vue.options / VueComponent.options
-涉及`Vue.options`的写操作主要分散在两处。一个地方是在`initGlobalAPI(Vue)`中，它的主要作用是初始化Vue的静态属性，其中包含了`Vue.options`：
+涉及`Vue.options`的写操作主要分散在两处。一个地方是在`initGlobalAPI(Vue)`中，它的主要作用是初始化Vue的一系列静态属性和方法，其中包含了`Vue.options`：
 ```js
 // src/core/global-api/index.js
 function initGlobalAPI (Vue) {
@@ -165,10 +165,10 @@ function mergeHook (parentVal, childVal) {
 在经过一些列的options合并完之后，`vm.$options`差不多长这样：
 
 ### 总结
-这一小节分析了`Vue`初始化阶段的`options`的合并过程，合并方式有两种：
-- 子组件初始化过程通过`initInternalComponent`
-- 手动调用构造函数`Vue`是通过`mergeOptions`
+这一小节分析了`Vue`初始化阶段的`options`的合并过程，合并`optoins`的作用是将构造函数上的静态`options`与创建实例提供的`options`合并到所创建的实例的`$options`中。
+
+合并的场景有两种：
+- 子组件初始化时，通过`initInternalComponent`合并
+- 手动调用构造函数`Vue`时，通过`mergeOptions`合并
 
 前者比后者更快。
-
-合并`optoins`的作用是将构造函数上的静态`options`与创建实例提供的`options`合并到所创建的实例的`$options`中。
