--- a/前端开发/伪元素和伪类.md
+++ b/前端开发/伪元素和伪类.md
@@ -1,12 +1,18 @@
-- 伪元素用于创建一些不在文档树中的元素，并为其添加样式。比如说，我们可以通过`:before`来在一个元素前增加一些文本，并为这些文本添加样式。虽然用户可以看到这些文本，但是这些文本实际上不在文档树中。
-- 伪类用于当已有元素处于的某个状态时，为其添加对应的样式，这个状态是根据用户行为而动态变化的。比如说，当用户悬停在指定的元素时，我们可以通过:hover来描述这个元素的状态。虽然它和普通的css类相似，可以为已有的元素添加样式，但是它只有处于dom树无法描述的状态下才能为元素添加样式，所以将其称为伪类。
-## 伪元素
+因为写法相似，很多人容易将伪类与伪元素混淆，
+
+- 伪元素用于创建一些不在文档树中的元素。比如说，我们可以通过`::before`伪元素来在一个元素前增加一些文本，并为这些文本添加样式。虽然用户可以看到这些文本，但实际上这类文本不在文档树中。
+- 伪类是一种选择器，
+### 伪元素
 
 ![伪元素](https://pic.downk.cc/item/5ecd4235c2a9a83be5a49d15.png)
 
-## 伪类
+### 伪类
 
 ![伪类](https://pic.downk.cc/item/5ecd41bac2a9a83be5a3e531.png)
+
+
+### 总结
+另外，在写法上CSS2中伪元素使用1个冒号，但在CSS3中为了区分伪类和伪元素，规定伪元素使用2个冒号。
 
 ___
 ### 参考
