--- a/浏览器工作原理/浏览器架构概述.md
+++ b/浏览器工作原理/浏览器架构概述.md
@@ -20,11 +20,11 @@
 
 可以看到，在chrome中，**不同的Tab页拥有不同的渲染进程**，每个插件运行在不同的插件进程中。除了之前表格中所列的的进程之外，在任务管理器中还可以看到`Audio Service`进程和`V8 代理解析工具`等进程。
 
-### 多进程架构的优点：
+#### 多进程架构的优点：
 - 一个Tab页的崩溃不会影响整个浏览器
 - **提供安全性和沙盒性**——操作系统提供了限制进程权限的方法，浏览器可以从某些功能上对进程进行沙盒处理
 
-### 多进程架构的缺点：
+#### 多进程架构的缺点：
 **更高的资源占用**——每个进程都拥有独立的内存空间，它们无法共享内存，这造成了一些基础结构副本方面的内存浪费，比如JavaScript运行环境会在不同渲染进程中存在。为了节省内存，Chrome限制了最大进程数，这个数字由设备的内存和CPU能力决定，当达到这一限制时，新打开的Tab会共用之前同一个站点的渲染进程。
 
 ## 浏览器内核
@@ -38,12 +38,12 @@
 |Blink|Chrome(2013+)、Opera|V8|2013|
 |Edge|Edge|Chakra|2015|
 
-### 渲染引擎
+#### 渲染引擎
 浏览器渲染引擎的主要工作就是渲染，即在浏览器窗口中呈现所请求的内容。渲染引擎可以渲染HTML、XML文档和图像，借助插件也可以渲染不同类型的文档比如PDF。
 
 关于渲染引擎的具体工作将在下一节详细分析。
 
-### JS引擎
+#### JS引擎
 开发者编写的JavaScript代码直接交给浏览器执行时，底层CPU是不认识的——CPU只认识自己的指令集（汇编代码）。**JS引擎可以将JavaScript代码编译为不同CPU(Intel, ARM以及MIPS等)对应的汇编代码**，除此之外，JS引擎还负责**执行代码**、**分配内存**以及**垃圾回收**。
 
 虽然浏览器非常多，但是主流的JavaScirpt引擎很少。而在为数不多JS引擎中，V8无疑是最流行的。Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作在后面小节将单独分析。
