--- a/开发总结/异常监控.md
+++ b/开发总结/异常监控.md
@@ -1,4 +1,7 @@
-
+之前我们分析了JavaScript错误以及JavaScript异常的捕获，而对于前端来说，我们会面对的异常还有：
+1. ajax异常
+2. 静态资源加载异常
+3. Promise异常
 
 ### 参考
 1. [一步一步搭建前端监控系统：如何监控资源加载错误？](https://blog.fundebug.com/2019/08/17/how-to-monitor-resource-error/)
